--- a/catalog.html
+++ b/catalog.html
@@ -9,25 +9,25 @@
       <nav class="navigation">
         <a class="header-logo-link" href="index.html"><img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop"></a>
         <ul class="navigation-list">
-          <li class="navigation-list__item navigation-list__item_current"><a class="navigation-list__link" href="#">Каталог</a></li>
+          <li class="navigation-list__item navigation-list__item--current"><a class="navigation-list__link" href="#">Каталог</a></li>
           <li class="navigation-list__item"><a class="navigation-list__link" href="#">Доставка и оплата</a></li>
           <li class="navigation-list__item"><a class="navigation-list__link" href="#">О Компании</a></li>
         </ul>
         <ul class="user-nav">
-          <li class="user-nav__list user-nav__list_search"><button class="user-nav__btn btn-search" type="button"><span class="visually-hidden">Поиск</span> </button>
-          <form class="nav-form nav-form_search" method="get" action="https://echo.htmlacademy.ru">
+          <li class="user-nav__list user-nav__list--search"><button class="user-nav__btn btn-search" type="button"><span class="visually-hidden">Поиск</span> </button>
+          <form class="nav-form nav-form--search" method="get" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search-info">Поиск</label>
-            <input class="nav-input nav-input_search" type="text" name="serch" id="search-info" placeholder="Что ищем?">
+            <input class="nav-input nav-input--search" type="text" name="serch" id="search-info" placeholder="Что ищем?">
           </form></li>
-          <li class="user-nav__list user-nav__list_login"><button class="user-nav__btn btn-login" type="button">Вход</button>
-            <form class="nav-form nav-form_login" method="post" action="https://echo.htmlacademy.ru">
+          <li class="user-nav__list user-nav__list--login"><button class="user-nav__btn btn-login" type="button">Вход</button>
+            <form class="nav-form nav-form--login" method="post" action="https://echo.htmlacademy.ru">
               <label class="visually-hidden" for="email-address">Электронная почта</label>
-              <input class="nav-input nav-input_email" id="email-address" type="email" name="email" placeholder="Электронная почта">
+              <input class="nav-input nav-input--email" id="email-address" type="email" name="email" placeholder="Электронная почта">
               <label class="visually-hidden" for="password-info">Пароль</label>
-              <input class="nav-input nav-input_password" type="password" name="password" id="password-info" placeholder="Пароль">
-              <button type="button" class="button button_login">Войти</button>
-              <a class="nav-login-link nav-login-link_password" href="#">Забыли пароль?</a>
-              <a class="nav-login-link nav-login-link_registration" href="#">Новая регистрация</a>
+              <input class="nav-input nav-input--password" type="password" name="password" id="password-info" placeholder="Пароль">
+              <button type="button" class="button button--login">Войти</button>
+              <a class="nav-login-link nav-login-link--password" href="#">Забыли пароль?</a>
+              <a class="nav-login-link nav-login-link--registration" href="#">Новая регистрация</a>
             </form>
           </li>
           <li class="user-nav__list user-nav__list_basket-full"><button type="button">Корзина</button>
@@ -63,7 +63,7 @@
       <div class="container-form">
         <form class="catalog-form" method="get" action="https://echo.htmlacademy.ru">
           <label class="input-name">Сортировка:</label>
-          <select class="catalog-input catalog-input_sort" name="select">
+          <select class="catalog-input catalog-input--sort" name="select">
             <option value="popularity">по популярности</option>
             <option value="popularity">по популярности</option>
             <option value="inexpensive">сначала недорогие</option>
@@ -71,23 +71,23 @@
             <option value="caloricity">по жирности</option>
           </select>
           <label class="input-name" for="range-price">Цена: 100 руб. - 500 руб.</label>
-          <input class="catalog-input catalog-input_price" type="range" name="range" id="range-price" min="100" max="500">
-          <fieldset class="catalog-input catalog-input_fat">
+          <input class="catalog-input catalog-input--price" type="range" name="range" id="range-price" min="100" max="500">
+          <fieldset class="catalog-input catalog-input--fat">
             <legend class="input-name">Жирность:</legend>
             <input class="catalog-radio-btn" type="radio" name="fat-content" value="zero" id="zero-percent">
             <label class="catalog-label" for="zero-percent">0%</label>
-            <input class="catalog-radio-btn catalog-radio-btn_activ" type="radio" name="fat-content" value="ten" id="ten-percent" checked>
+            <input class="catalog-radio-btn catalog-radio-btn--activ" type="radio" name="fat-content" value="ten" id="ten-percent" checked>
             <label class="catalog-label" for="ten-percent">до 10%</label>
             <input class="catalog-radio-btn" type="radio" name="fat-content" value="thirty" id="thirty-percent">
             <label class="catalog-label" for="thirty-percent">до 30%</label>
             <input class="catalog-radio-btn" type="radio" name="fat-content" value="more-thirty" id="more-thirty-percent">
             <label class="catalog-label" for="more-thirty-percent">выше 30%</label>
           </fieldset>
-          <fieldset class="catalog-input catalog-input_filler">
+          <fieldset class="catalog-input catalog-input--filler">
             <legend class="input-name">Наполнители:</legend>
-            <input class="catalog-check-btn catalog-check-btn_checked" type="checkbox" name="chocolate" id="chocolate-filter" checked>
+            <input class="catalog-check-btn catalog-check-btn--checked" type="checkbox" name="chocolate" id="chocolate-filter" checked>
             <label class="catalog-label" for="chocolate-filter">шоколадные</label>
-            <input class="catalog-check-btn catalog-check-btn_checked" type="checkbox" name="sugar" id="sugar-filter" checked>
+            <input class="catalog-check-btn catalog-check-btn--checked" type="checkbox" name="sugar" id="sugar-filter" checked>
             <label class="catalog-label" for="sugar-filter">сахарные присыпки</label>
             <input class="catalog-check-btn" type="checkbox" name="fruit" id="fruit-filter">
             <label class="catalog-label" for="fruit-filter">фрукты</label>
@@ -101,14 +101,14 @@
       </div>
       <section class="creamy-ice-cream">
         <h2 class="visually-hidden">Ассортимент сливочного мороженого</h2>
-        <ul class="product product_creamy">
+        <ul class="product product--creamy">
           <li class="icy-cream-item">
             <a class="icy-cream-item__link" href="#">
               <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
               <p class="icy-cream-item__description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
-            <button type="button" class="button button_product">Быстрый просмотр</button>
+            <button type="button" class="button button--product">Быстрый просмотр</button>
           </li>
           <li class="icy-cream-item">
             <a class="icy-cream-item__link" href="#">
@@ -131,76 +131,76 @@
                 <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочное крем-брюле с карамельной подливкой</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-2a.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-                <p class="icy-cream-item__info">325 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">325 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочное с брусничным джемом</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-2b.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-                <p class="icy-cream-item__info">410 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">410 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочно-черничное с цельными ягодами черники</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-2c.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-                <p class="icy-cream-item__info">375 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">375 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочно-лимонное с карамельной присыпкой</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-2d.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-                <p class="icy-cream-item__info">320 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">320 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочное с шоколадной стружкой</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-3a.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-                <p class="icy-cream-item__info">440 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">440 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочно-ванильное с кусочками шоколада</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-3b.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-                <p class="icy-cream-item__info">435 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">435 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочное с ментоловым сиропом</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-3c.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-                <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочное с кусочками черного шоколада</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a  class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/icecream-3d.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-                <p class="icy-cream-item__info">420 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">420 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочное с мятным сиропом</p>
               </a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
           </ul>
         </section>
         <ul class="pagination-list">
-          <li class="pagination-number_current">1</li>
+          <li class="pagination-number--current">1</li>
           <li class="pagination-number"><a href="#">2</a></li>
           <li class="pagination-number"><a href="#">3</a></li>
           <li class="pagination-number"><a href="#">4</a></li>
@@ -209,13 +209,13 @@
       </main>
       <footer class="main-footer">
         <ul class="social-btn">
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link_twitter" href="#">Твитер</a></li>
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link_insta" href="#">Инстаграм</a></li>
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link_fb" href="#">Фейсбук</a></li>
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link_vk" href="#">Вконтакте</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#">Твитер</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#">Инстаграм</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--fb" href="#">Фейсбук</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--vk" href="#">Вконтакте</a></li>
         </ul>
         <ul class="helpful-info">
-          <li class="helpful-info__item helpful-info__item_heart"><a class="footer-link" href="#">Для поставщиков</a></li>
+          <li class="helpful-info__item helpful-info__item--heart"><a class="footer-link" href="#">Для поставщиков</a></li>
           <li class="helpful-info__item"><a class="footer-link" href="#">Наши документы</a></li>
           <li class="helpful-info__item"><a class="footer-link" href="#">О производстве</a></li>
           <li class="helpful-info__item"><a class="footer-link" href="#">Экологические стандарты</a></li>
