--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="wrap">
       <nav class="navigation">
         <a class="header-logo-link" href="index.html"><img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop"></a>
         <ul class="navigation-list">
@@ -32,89 +31,88 @@
             </li>
             <li class="user-nav__list user-nav__list_basket-full"><button type="button">2 товара</button>
               <div class="purchase-wrap">
-              <ul class="purchase">
-                <li class="purchase-item">
-                  <span class="purchase-item__remove"><button class="remove-purchase" type="button">X</button></span>
-                  <p class="purchase-item__buy-item">Пломбир с апельсиновым джемом</p>
-                  <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price">200руб.</span></p>
-                  <span class="purchase-item__price">300 руб.</span>
-                </li>
-                <li class="purchase-item">
-                  <span class="purchase-item__remove"><button class="remove-purchase" type="button" aria-label="Закрыть"></button></span>
-                  <p class="purchase-item__buy-item">Клубничный пломбир с присыпкой из белого шоколада</p>
-                  <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price">300руб.</span></p>
-                  <span class="purchase-item__price">450 руб.</span>
-                </li>
-              </ul><hr>
-              <span class="total"><b>Итого: 750 руб.</b>
-              </span>
-              <button class="button" type="button">Оформить заказ</button>
-            </div>
+                <ul class="purchase">
+                  <li class="purchase-item">
+                    <span class="purchase-item__remove"><button class="remove-purchase" type="button">X</button></span>
+                    <p class="purchase-item__buy-item">Пломбир с апельсиновым джемом</p>
+                    <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price">200руб.</span></p>
+                    <span class="purchase-item__price">300 руб.</span>
+                  </li>
+                  <li class="purchase-item">
+                    <span class="purchase-item__remove"><button class="remove-purchase" type="button" aria-label="Закрыть"></button></span>
+                    <p class="purchase-item__buy-item">Клубничный пломбир с присыпкой из белого шоколада</p>
+                    <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price">300руб.</span></p>
+                    <span class="purchase-item__price">450 руб.</span>
+                  </li>
+                </ul><hr>
+                <span class="total"><b>Итого: 750 руб.</b>
+                </span>
+                <button class="button" type="button">Оформить заказ</button>
+              </div>
             </li>
           </ul>
         </nav>
         <div class="time-info-wrap">
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="index.html">Главная</a></li>
-          <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="#">Каталог</a></li>
-          <li class="breadcrumbs__menu">Сливочное</li>
-        </ul>
-        <div class="time-info-wrap">
-        <p class="header-time-info">С 10 до 20,ежедневно<br>
-          <span class="header-time-info__phone">8 812 450-25-25</span>
-        </p>
-      </div>
-      </div>
-    </div>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="index.html">Главная</a></li>
+            <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="#">Каталог</a></li>
+            <li class="breadcrumbs__menu">Сливочное</li>
+          </ul>
+          <p class="header-time-info">С 10 до 20,ежедневно<br>
+            <span class="header-time-info__phone">8 812 450-25-25</span>
+          </p>
+        </div>
       </header>
       <main class="catalog">
-        <div class="wrap">
         <h1 class="catalog__title">Сливочное мороженое</h1>
         <div class="container-form">
           <form class="catalog-form" method="get" action="https://echo.htmlacademy.ru">
-            <div class="catalog-form-item">
-            <label class="input-name">Сортировка:</label>
-            <select class="catalog-input catalog-input--sort" name="select">
-              <option value="popularity">по популярности</option>
-              <option value="popularity">по популярности</option>
-              <option value="inexpensive">сначала недорогие</option>
-              <option value="expensive">сначала дорогие</option>
-              <option value="caloricity">по жирности</option>
-            </select>
-          </div>
-          <div class="catalog-form-item">
-            <label class="input-name" for="range-price">Цена: 100 руб. - 500 руб.</label>
-            <input class="catalog-input catalog-input--price" type="range" name="range" id="range-price" min="100" max="500">
-          </div>
-          
+            <div class="catalog-form-block">
+              <label class="input-name">Сортировка:</label>
+              <select class="catalog-input catalog-input--sort" name="select">
+                <option value="popularity">по популярности</option>
+                <option value="popularity">по популярности</option>
+                <option value="inexpensive">сначала недорогие</option>
+                <option value="expensive">сначала дорогие</option>
+                <option value="caloricity">по жирности</option>
+              </select>
+            </div>
+            <div class="catalog-form-block">
+              <label class="input-name" for="range-price">Цена: 100 руб. - 500 руб.</label>
+              <div class="catalog-range">
+                <input class="catalog-input--price" type="range" name="range" id="range-price" min="100" max="500">
+              </div>
+            </div>
             <fieldset class="catalog-input-fat">
               <legend class="input-name">Жирность:</legend>
               <div class="catalog-form-item catalog-form-item--radio">
-              <input class="catalog-radio-btn" type="radio" name="fat-content" value="zero" id="zero-percent">
-              <label class="catalog-label" for="zero-percent">0%</label>
-              <input class="catalog-radio-btn catalog-radio-btn--activ" type="radio" name="fat-content" value="ten" id="ten-percent" checked>
-              <label class="catalog-label" for="ten-percent">до 10%</label>
-              <input class="catalog-radio-btn" type="radio" name="fat-content" value="thirty" id="thirty-percent">
-              <label class="catalog-label" for="thirty-percent">до 30%</label>
-              <input class="catalog-radio-btn" type="radio" name="fat-content" value="more-thirty" id="more-thirty-percent">
-              <label class="catalog-label" for="more-thirty-percent">выше 30%</label>
+                <input class="catalog-radio-btn" type="radio" name="fat-content" value="zero" id="zero-percent">
+                <label class="catalog-label" for="zero-percent">0%</label>
+                <input class="catalog-radio-btn catalog-radio-btn--activ" type="radio" name="fat-content" value="ten" id="ten-percent" checked>
+                <label class="catalog-label" for="ten-percent">до 10%</label>
+                <input class="catalog-radio-btn" type="radio" name="fat-content" value="thirty" id="thirty-percent">
+                <label class="catalog-label" for="thirty-percent">до 30%</label>
+                <input class="catalog-radio-btn" type="radio" name="fat-content" value="more-thirty" id="more-thirty-percent">
+                <label class="catalog-label" for="more-thirty-percent">выше 30%</label>
+              </div>
             </fieldset>
-          </div>
-          <div class="catalog-form-item">
-            <fieldset class="catalog-input-filler">
-              <legend class="input-name">Наполнители:</legend>
-              <input class="catalog-check-btn catalog-check-btn--checked" type="checkbox" name="chocolate" id="chocolate-filter" checked>
-              <label class="catalog-label" for="chocolate-filter">шоколадные</label>
-              <input class="catalog-check-btn catalog-check-btn--checked" type="checkbox" name="sugar" id="sugar-filter" checked>
-              <label class="catalog-label" for="sugar-filter">сахарные присыпки</label>
-              <input class="catalog-check-btn" type="checkbox" name="fruit" id="fruit-filter">
-              <label class="catalog-label" for="fruit-filter">фрукты</label>
-              <input class="catalog-check-btn" type="checkbox" name="syrups" id="syrups-filter">
-              <label class="catalog-label" for="syrups-filter">сиропы</label>
-              <input class="catalog-check-btn" type="checkbox" name="jam" id="jam-filter">
-              <label class="catalog-label" for="jam-filter">джемы</label>
-            </fieldset>
-          </div>
+            <div class="catalog-form-block">
+              <fieldset class="catalog-input-filler">
+                <legend class="input-name">Наполнители:</legend>
+                <div class="catalog-form-item catalog-form-item--checkbox">
+                  <input class="catalog-check-btn catalog-check-btn--checked" type="checkbox" name="chocolate" id="chocolate-filter" checked>
+                  <label class="catalog-label" for="chocolate-filter">шоколадные</label>
+                  <input class="catalog-check-btn catalog-check-btn--checked" type="checkbox" name="sugar" id="sugar-filter" checked>
+                  <label class="catalog-label" for="sugar-filter">сахарные присыпки</label>
+                  <input class="catalog-check-btn" type="checkbox" name="fruit" id="fruit-filter">
+                  <label class="catalog-label" for="fruit-filter">фрукты</label>
+                  <input class="catalog-check-btn" type="checkbox" name="syrups" id="syrups-filter">
+                  <label class="catalog-label" for="syrups-filter">сиропы</label>
+                  <input class="catalog-check-btn" type="checkbox" name="jam" id="jam-filter">
+                  <label class="catalog-label" for="jam-filter">джемы</label>
+                </div>
+              </fieldset>
+            </div>
             <button class="form-btn" type="button">Применить</button>
           </form>
         </div>
@@ -226,26 +224,24 @@
             <li class="pagination-number"><a class="pagination-link" href="#">5</a></li>
           </ul>
         </div>
-        </main>
-        <footer class="main-footer">
-          <div class="wrap">
-          <ul class="social-btn">
-            <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#">Твитер</a></li>
-            <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#">Инстаграм</a></li>
-            <li class="social-btn__item"><a class="social-btn__link social-btn__link--fb" href="#">Фейсбук</a></li>
-            <li class="social-btn__item"><a class="social-btn__link social-btn__link--vk" href="#">Вконтакте</a></li>
-          </ul>
-          <ul class="helpful-info">
-            <li class="helpful-info__item helpful-info__item--heart"><a class="footer-link" href="#">Для поставщиков</a></li>
-            <li class="helpful-info__item"><a class="footer-link" href="#">Наши документы</a></li>
-            <li class="helpful-info__item"><a class="footer-link" href="#">О производстве</a></li>
-            <li class="helpful-info__item"><a class="footer-link" href="#">Экологические стандарты</a></li>
-          </ul>
-          <div class="footer-copyright">
-            <img class="footer-copyright__html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="108" height="39">
-            <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
-          </div>
+      </main>
+      <footer class="main-footer">
+        <ul class="social-btn">
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#">Твитер</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#">Инстаграм</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--fb" href="#">Фейсбук</a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--vk" href="#">Вконтакте</a></li>
+        </ul>
+        <ul class="helpful-info">
+          <li class="helpful-info__item helpful-info__item--heart"><a class="footer-link" href="#">Для поставщиков</a></li>
+          <li class="helpful-info__item"><a class="footer-link" href="#">Наши документы</a></li>
+          <li class="helpful-info__item"><a class="footer-link" href="#">О производстве</a></li>
+          <li class="helpful-info__item"><a class="footer-link" href="#">Экологические стандарты</a></li>
+        </ul>
+        <div class="footer-copyright">
+          <img class="footer-copyright__html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="108" height="39">
+          <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
         </div>
-        </footer>
-      </body>
-    </html>
+      </footer>
+    </body>
+  </html>
